--- a/LibreriaDefinitiva/wwwroot/contatti.html
+++ b/LibreriaDefinitiva/wwwroot/contatti.html
@@ -88,7 +88,7 @@
             <button type="submit">Invia</button>
         </form>
     </div>
-    <footer style="position: fixed">
+    <footer>
         <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
         <p>
             <a href="https://localhost:44315/contatti.html">Contatti</a> |
