--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -60,7 +60,7 @@
 	<header>
 		<nav>
 			<a href="https://localhost:44315/index.html">
-				<img src="https://localhost:44315/images/logoNav.png" alt="Logo" id="logo" style="height: 30px; width: auto">
+				<img src="https://localhost:44315/images/icon.png" alt="Logo" id="logo" style="height: 50px; width: auto">
 			</a>
 			<a href="https://localhost:44315/aggiungiLibro.html" id="add-book-link">Aggiungi un libro</a>
 			<a href="https://localhost:44315/rimuoviLibro.html" id="remove-book-link">Rimuovi un libro</a>
@@ -69,7 +69,9 @@
 	</header>
 	<div id="main-content">
 		<!-- Contenuto dinamico caricato qui -->
-		<img align="middle" src="https://localhost:44315/images/logoNav.png" alt="Logo" id="logo" style="height: 100px; width: auto" >
+		<div class="nome" align-items="center">
+			<img align="middle" src="https://localhost:44315/images/logoNav.png" alt="Logo" id="logo" style="height: 100px; width: auto">
+		</div>
 		<h4>I più venduti di oggi:</h4>
 		<div class="owl-carousel owl-theme">
 			<div class="item"><img src="https://m.media-amazon.com/images/I/71udMMHFpTL._SL1500_.jpg" alt="AK" /></div>
