--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -59,9 +59,9 @@
 <body style="background-color: #d0d0d0">
 	<header>
 		<nav>
-			<a href="https://localhost:44315/index.html">
-				<img src="https://localhost:44315/images/icon.png" alt="Logo" id="logo" style="height: 50px; width: auto">
-			</a>
+			<div class="nome">
+				<img src="https://localhost:44315/images/logoNav.png" alt="Logo" id="logo">
+			</div>
 			<a href="https://localhost:44315/aggiungiLibro.html" id="add-book-link">Aggiungi un libro</a>
 			<a href="https://localhost:44315/rimuoviLibro.html" id="remove-book-link">Rimuovi un libro</a>
 			<a href="https://localhost:44315/cercaLibro.html" id="search-book-link">Cerca un libro</a>
