--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -59,9 +59,7 @@
 <body style="background-color: #d0d0d0">
 	<header>
 		<nav>
-			<div class="nome">
-				<img src="https://localhost:44315/images/logoNav.png" alt="Logo" id="logo">
-			</div>
+			<img src="https://localhost:44315/images/icon.png" href="https://localhost:44315/index.html" alt="LogoNav" id="logonav" height="50px" width="50px">
 			<a href="https://localhost:44315/aggiungiLibro.html" id="add-book-link">Aggiungi un libro</a>
 			<a href="https://localhost:44315/rimuoviLibro.html" id="remove-book-link">Rimuovi un libro</a>
 			<a href="https://localhost:44315/cercaLibro.html" id="search-book-link">Cerca un libro</a>
