--- a/LibreriaDefinitiva/wwwroot/cercaLibro.html
+++ b/LibreriaDefinitiva/wwwroot/cercaLibro.html
@@ -74,9 +74,27 @@
             <input type="text" id="search-title" name="search" placeholder="Cerca per titolo o autore"><br><br>
             <button onclick="searchBooks()" type="submit">Cerca</button>
         </form>
-
     </div>
-    
+    <div class="tabella">
+        <table>
+            <thead>
+                <tr>
+                    <th>ISBN</th>
+                    <th>Titolo</th>
+                    <th>Autore</th>
+                    <th>Genere</th>
+                    <th>Edizione</th>
+                    <th>Prezzo</th>
+                    <th>Quantita</th>
+                </tr>
+            </thead>
+            <tbody>
+                <!-- Dati da file -->
+            </tbody>
+        </table>
+    </div>
+
+
     <footer style="position: fixed">
         <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
         <p>
