--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -41,6 +41,8 @@
 				loop: true,
 				margin: 10,
 				nav: true,
+				autoplay: true, // Abilita l'autoplay
+				autoplayTimeout: 4000, // Imposta il tempo di visualizzazione di ogni slide in millisecondi
 				responsive: {
 					0: {
 						items: 1
