--- a/LibreriaDefinitiva/wwwroot/aggiungiLibro.html
+++ b/LibreriaDefinitiva/wwwroot/aggiungiLibro.html
@@ -80,6 +80,9 @@
             <input type="text" id="Genere" name="Genere"><br>
             <label for="year" Edizione:</label><br>
             <input type="text" id="Edizione" name="Edizione"><br>
+            <label for="year" Prezzo:</label><br>
+            <input type="text" id="Prezzo" name="Prezzo"><br>
+            <label for="year" Prezzo:</label><br>
             <label for="year" Quantità:</label><br>
             <input type="text" id="Quantità" name="Quantità"><br>
             <button type="submit">Carica</button>
