--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -101,7 +101,7 @@
 		</div>
 	</div>
 	<footer>
-		<p>&copy; 2024. Tutti i diritti riservati.</p>
+		<p>&copy; 2024. La Frontiera Letteraria Tutti i diritti riservati.</p>
 		<p>
 			<a href="https://localhost:44315/contatti.html">Contatti</a> |
 			<a href="https://localhost:44315/privacy.html">Privacy</a> |
