--- a/LibreriaDefinitiva/wwwroot/privacy.html
+++ b/LibreriaDefinitiva/wwwroot/privacy.html
@@ -111,7 +111,7 @@
         </ul>
     </div>
     <footer>
-        <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 La Frontiera Letteraria. Tutti i diritti riservati.</p>
         <p>
             <a href="https://localhost:44315/contatti.html">Contatti</a> |
             <a href="https://localhost:44315/privacy.html">Privacy</a> |
