--- a/LibreriaDefinitiva/wwwroot/aggiungiLibro.html
+++ b/LibreriaDefinitiva/wwwroot/aggiungiLibro.html
@@ -70,26 +70,32 @@
     <div id="main-content">
         <h2>Aggiungi un libro</h2>
         <form id="add-book-form">
-            <label for="title">Titolo:</label><br>
-            <input type="text" id="Titolo" name="Titolo"><br>
-            <label for="author">Autore:</label><br>
-            <input type="text" id="Autore" name="Autore"><br>
             <label for="isbn">ISBN:</label><br>
-            <input type="text" id="Isbn" name="Isbn"><br>
+            <input type="text" id="Isbn" name="Isbn" placeholder="Es. 9881234567890"><br>
+
+            <label for="title">Titolo:</label><br>
+            <input type="text" id="Titolo" name="Titolo" placeholder="Es. La Compagnia dell'Anello"><br>
+
+            <label for="author">Autore:</label><br>
+            <input type="text" id="Autore" name="Autore" placeholder="Es. J.R.R. Tolkien"><br>
+
             <label for="genre">Genere:</label><br>
-            <input type="text" id="Genere" name="Genere"><br>
-            <label for="year" Edizione:</label><br>
-            <input type="text" id="Edizione" name="Edizione"><br>
-            <label for="year" Prezzo:</label><br>
-            <input type="text" id="Prezzo" name="Prezzo"><br>
-            <label for="year" Prezzo:</label><br>
-            <label for="year" Quantità:</label><br>
-            <input type="text" id="Quantità" name="Quantità"><br>
+            <input type="text" id="Genere" name="Genere" placeholder="Es. Fantasy"><br>
+
+            <label for="Prezzo">Prezzo:</label><br>
+            <input type="text" id="Prezzo" name="Prezzo" placeholder="Es. 12.50"><br>
+
+            <label for="Quantità">Quantità:</label><br />
+            <input type="text" id="Quantità" name="Quantità" placeholder="Es. 4"><br>
+
+            <label for="year">Edizione:</label><br>
+            <input type="text" id="Edizione" name="Edizione" placeholder="Es. Mondadori(2024)"><br>
+
             <button type="submit">Carica</button>
         </form>
     </div>
     <footer>
-        <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 La Frontiera Letteraria. Tutti i diritti riservati.</p>
         <p>
             <a href="https://localhost:
                /contatti.html">Contatti</a> |
