--- a/LibreriaDefinitiva/wwwroot/cercaLibro.html
+++ b/LibreriaDefinitiva/wwwroot/cercaLibro.html
@@ -33,6 +33,26 @@
             <input type="text" id="search-title" name="search" placeholder="Cerca per titolo, autore o ISBN"><br><br>
             <button type="submit">Cerca</button>
         </form>
+        <div id="filroGenere" style="align-content: center; align-items: center; align-self: center">
+            <select accesskey="Filtra per Genere">
+                <option>Filtra per Genere</option>
+                <option>Poesia Epica</option>
+                <option>Romanzo storico</option>
+                <option>Romanzo</option>
+                <option>Letteratura per ragazzi</option>
+                <option>Romanzo gotico</option>
+                <option>Romanzo distopico</option>
+                <option>Fantasy</option>
+                <option>Romanzo parodico</option>
+                <option>Romanzo d'avventura</option>
+                <option>Romanzo breve</option>
+                <option>Romanzo psicologico</option>
+                <option>Romanzo fantastico</option>
+                <option>Romanzo per ragazzi</option>
+                <option>Romanzo giallo</option>
+                <option>Thriller</option>
+            </select>
+        </div>
     </div>
     <div class="tabella">
         <table>
@@ -54,7 +74,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 La Frontiera Letteraria. Tutti i diritti riservati.</p>
         <p>
             <a href="https://localhost:44315/contatti.html">Contatti</a> |
             <a href="https://localhost:44315/privacy.html">Privacy</a> |
