--- a/LibreriaDefinitiva/wwwroot/rimuoviLibro.html
+++ b/LibreriaDefinitiva/wwwroot/rimuoviLibro.html
@@ -76,7 +76,7 @@
         </form>
     </div>
     <footer style="position: fixed">
-        <p>&copy; 2024 La Libreria del Vezzo. Tutti i diritti riservati.</p>
+        <p>&copy; 2024 La Frontiera Letteraria. Tutti i diritti riservati.</p>
         <p>
             <a href="https://localhost:44315/contatti.html">Contatti</a> |
             <a href="https://localhost:44315/privacy.html">Privacy</a> |
