--- a/LibreriaDefinitiva/wwwroot/cercaLibro.html
+++ b/LibreriaDefinitiva/wwwroot/cercaLibro.html
@@ -33,29 +33,29 @@
             <input type="text" id="search-title" name="search" placeholder="Cerca per titolo, autore o ISBN"><br><br>
             <button type="submit">Cerca</button>
         </form>
-        <div id="filroGenere" style="align-content: center; align-items: center; align-self: center">
-            <select accesskey="Filtra per Genere">
-                <option>Filtra per Genere</option>
-                <option>Poesia Epica</option>
-                <option>Romanzo storico</option>
-                <option>Romanzo</option>
-                <option>Letteratura per ragazzi</option>
-                <option>Romanzo gotico</option>
-                <option>Romanzo distopico</option>
-                <option>Fantasy</option>
-                <option>Romanzo parodico</option>
-                <option>Romanzo d'avventura</option>
-                <option>Romanzo breve</option>
-                <option>Romanzo psicologico</option>
-                <option>Romanzo fantastico</option>
-                <option>Romanzo per ragazzi</option>
-                <option>Romanzo giallo</option>
-                <option>Thriller</option>
+        <div id="filtroGenere" style="align-content: center; align-items: center; align-self: center">
+            <select id="genere-select" onchange="filterByGenere(event)">
+                <option value="">Filtra per Genere</option>
+                <option value="Poesia Epica">Poesia Epica</option>
+                <option value="Romanzo storico">Romanzo storico</option>
+                <option value="Romanzo">Romanzo</option>
+                <option value="Letteratura per ragazzi">Letteratura per ragazzi</option>
+                <option value="Romanzo gotico">Romanzo gotico</option>
+                <option value="Romanzo distopico">Romanzo distopico</option>
+                <option value="Fantasy">Fantasy</option>
+                <option value="Romanzo parodico">Romanzo parodico</option>
+                <option value="Romanzo d'avventura">Romanzo d'avventura</option>
+                <option value="Romanzo breve">Romanzo breve</option>
+                <option value="Romanzo psicologico">Romanzo psicologico</option>
+                <option value="Romanzo fantastico">Romanzo fantastico</option>
+                <option value="Romanzo per ragazzi">Romanzo per ragazzi</option>
+                <option value="Romanzo giallo">Romanzo giallo</option>
+                <option value="Thriller">Thriller</option>
             </select>
         </div>
     </div>
     <div class="tabella">
-        <table>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th>ISBN</th>
