--- a/LibreriaDefinitiva/wwwroot/rimuoviLibro.html
+++ b/LibreriaDefinitiva/wwwroot/rimuoviLibro.html
@@ -72,6 +72,8 @@
         <form id="remove-book-form">
             <label for="isbn">ISBN:</label><br>
             <input type="text" id="isbn" name="isbn"><br><br>
+            <label for="quantita">Quantita:</label><br>
+            <input type="number" id="quantita" name="quantita"><br><br>
             <button type="submit">Rimuovi</button>
         </form>
     </div>
