--- a/LibreriaDefinitiva/wwwroot/index.html
+++ b/LibreriaDefinitiva/wwwroot/index.html
@@ -3,8 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" type="image/png" href="https://localhost:
-		  /images/icon.png">
+	<link rel="icon" type="image/png" href="https://localhost:7283/images/icon.png">
 	<title>La Frontiera Letteraria</title>
 	<link rel="stylesheet" href="style/site.css">
 	<script defer src="script/site.js"></script>
